; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zfs_dir.c_zfs_sticky_remove_access.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zfs_dir.c_zfs_sticky_remove_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32 }
%struct.TYPE_12__ = type { i64 }
%struct.TYPE_13__ = type { i32 }

@S_ISVTX = common dso_local global i32 0, align 4
@ZFS_OWNER = common dso_local global i32 0, align 4
@ACE_WRITE_DATA = common dso_local global i32 0, align 4
@B_FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zfs_sticky_remove_access(%struct.TYPE_11__* %0, %struct.TYPE_11__* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_11__*, align 8
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca %struct.TYPE_12__*, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %5, align 8
  store %struct.TYPE_11__* %1, %struct.TYPE_11__** %6, align 8
  store i32* %2, i32** %7, align 8
  %12 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %13 = call %struct.TYPE_12__* @ZTOZSB(%struct.TYPE_11__* %12)
  store %struct.TYPE_12__* %13, %struct.TYPE_12__** %11, align 8
  %14 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %15 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %65

19:                                               ; preds = %3
  %20 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @S_ISVTX, align 4
  %24 = and i32 %22, %23
  %25 = icmp eq i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %19
  store i32 0, i32* %4, align 4
  br label %65

27:                                               ; preds = %19
  %28 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %29 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %30 = call %struct.TYPE_13__* @ZTOI(%struct.TYPE_11__* %29)
  %31 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @KUID_TO_SUID(i32 %32)
  %34 = load i32*, i32** %7, align 8
  %35 = load i32, i32* @ZFS_OWNER, align 4
  %36 = call i64 @zfs_fuid_map_id(%struct.TYPE_12__* %28, i32 %33, i32* %34, i32 %35)
  store i64 %36, i64* %9, align 8
  %37 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %38 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %39 = call %struct.TYPE_13__* @ZTOI(%struct.TYPE_11__* %38)
  %40 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = call i32 @KUID_TO_SUID(i32 %41)
  %43 = load i32*, i32** %7, align 8
  %44 = load i32, i32* @ZFS_OWNER, align 4
  %45 = call i64 @zfs_fuid_map_id(%struct.TYPE_12__* %37, i32 %42, i32* %43, i32 %44)
  store i64 %45, i64* %10, align 8
  %46 = load i32*, i32** %7, align 8
  %47 = call i64 @crgetuid(i32* %46)
  store i64 %47, i64* %8, align 8
  %48 = load i64, i64* %9, align 8
  %49 = icmp eq i64 %47, %48
  br i1 %49, label %61, label %50

50:                                               ; preds = %27
  %51 = load i64, i64* %8, align 8
  %52 = load i64, i64* %10, align 8
  %53 = icmp eq i64 %51, %52
  br i1 %53, label %61, label %54

54:                                               ; preds = %50
  %55 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %56 = load i32, i32* @ACE_WRITE_DATA, align 4
  %57 = load i32, i32* @B_FALSE, align 4
  %58 = load i32*, i32** %7, align 8
  %59 = call i64 @zfs_zaccess(%struct.TYPE_11__* %55, i32 %56, i32 0, i32 %57, i32* %58)
  %60 = icmp eq i64 %59, 0
  br i1 %60, label %61, label %62

61:                                               ; preds = %54, %50, %27
  store i32 0, i32* %4, align 4
  br label %65

62:                                               ; preds = %54
  %63 = load i32*, i32** %7, align 8
  %64 = call i32 @secpolicy_vnode_remove(i32* %63)
  store i32 %64, i32* %4, align 4
  br label %65

65:                                               ; preds = %62, %61, %26, %18
  %66 = load i32, i32* %4, align 4
  ret i32 %66
}

declare dso_local %struct.TYPE_12__* @ZTOZSB(%struct.TYPE_11__*) #1

declare dso_local i64 @zfs_fuid_map_id(%struct.TYPE_12__*, i32, i32*, i32) #1

declare dso_local i32 @KUID_TO_SUID(i32) #1

declare dso_local %struct.TYPE_13__* @ZTOI(%struct.TYPE_11__*) #1

declare dso_local i64 @crgetuid(i32*) #1

declare dso_local i64 @zfs_zaccess(%struct.TYPE_11__*, i32, i32, i32, i32*) #1

declare dso_local i32 @secpolicy_vnode_remove(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
